# sofa

./: CMakeLists.txt
applications/plugins/: CMakeLists.txt
applications/plugins/ParallelVectors/: CMakeLists.txt  ParallelMechanicalObject.cpp  ParallelMechanicalObject.h  ParallelMechanicalObject.inl  ParallelMemoryManager.h  ParallelTypes.cpp  ParallelTypes.h  initParallelVectors.cpp  initParallelVectors.h  vector_parallel.h
extlibs/: CMakeLists.txt
extlibs/CGoGN_2/: CMakeLists.txt
modules/SofaBoundaryCondition/: FixedConstraint.h  PartialFixedConstraint.h
modules/SofaGeneralLoader/: ReadState.inl
modules/SofaGeneralObjectInteraction/: BoxStiffSpringForceField.inl
modules/SofaGeneralRigid/: ArticulatedSystemMapping.h  ArticulatedSystemMapping.inl
modules/SofaGeneralSimpleFem/: BeamFEMForceField.inl  CMTetrahedralCorotationalFEMForceField.cpp  CMTetrahedralCorotationalFEMForceField.h  CMTetrahedralCorotationalFEMForceField.inl  CMakeLists.txt  ElementFEMForceField.h  ElementFEMForceField.inl  HexaFEMForceField.cpp  HexaFEMForceField.h  HexaFEMForceField.inl  TetrahedralCorotationalFEMForceField.cpp  TetrahedralCorotationalFEMForceField.inl  TriangularFEMForceFieldOptim.h  TriangularFEMForceFieldOptim.inl
modules/SofaMiscFem/: CMTriangularFEMForceField.h  CMTriangularFEMForceField.inl  CMakeLists.txt  ElementFEMForceField.cpp  ElementFEMForceField.inl  HexaFEMForceField.cpp  HexaFEMForceField.h
modules/SofaUserInteraction/: CMakeLists.txt  MechanicalRigidStateFilter.cpp  MechanicalRigidStateFilter.h  MechanicalRigidStateFilter.inl  (+4 more)
(+115 files in other folders)
